--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 				<li><a href="#">Especialidade</a></li>
 				<li><a href="#">Contato</a></li>
 			</ul>
+			<div class="menu-btn">
+				<ion-icon name="menu-outline"></ion-icon>
+			</div>
 		</div>
 	</div>
 	<!--home inicio -->
@@ -25,17 +28,21 @@
 				<div class="text-1">Olá, meu nome é</div>
 				<div class="text-2">Andrei Larroque dos Santos</div>
 				<div class="text-3">Eu sou <span>desenvolvedor</span></div>
+				<a href="#">Contratar-me</a>
 			</div>
 		</div>
 	</section>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+
+	<!--sessao sobre-->
+	<section class="about" id="about">
+		<div class="max-width">
+			<div class="about-content">
+				<div class="column left">
+					<img src="imagens/imagem.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
