--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class=logo><a href="#">Port<span>fólio</span></a></div>
 			<ul class="menu">
 				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Serviços</a></li>
+				<li><a href="#">Sobre mim</a></li>
 				<li><a href="#">Especialidade</a></li>
 				<li><a href="#">Contato</a></li>
 			</ul>
@@ -21,6 +21,7 @@
 			</div>
 		</div>
 	</div>
+
 	<!--home inicio -->
 	<section class="home" id="home">
 		<div class="max-width">
@@ -36,9 +37,51 @@
 	<!--sessao sobre-->
 	<section class="about" id="about">
 		<div class="max-width">
+			<h2 class="title">Sobre</h2>
 			<div class="about-content">
 				<div class="column left">
-					<img src="imagens/imagem.png" alt="">
+					<img src="imagens/imagem1.JPG" alt="">
+				</div>
+				<div class="column right">
+						<div class="text">Sou Andrei e sou <span>desenvolvedor</span></div>
+						<p>Sou estudante de Engenharia da Computação e possuo conhecimento em HTML, CSS, C e PYTHON.</p>
+						<a href="">Download CV</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="script.js"></script>
+
+	<!--sessao serviços-->
+	<section class="services" id="services">
+		<div class="max-width">
+			<h2 class="title">Habilidades</h2>
+			<div class="serv-content">
+				<div class="card">
+					<div class="box">
+					<ion-icon name="code-outline"></ion-icon>
+					<div class="text">HTML</div>
+					<p>Possuo habilidades com HTML como demonstrado nesse site</p>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="box">
+					<ion-icon name="logo-css3"></ion-icon>
+					<div class="text">CSS</div>
+					<p>Possuo habilidades com CSS utilizados no design desse site</p>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="box">
+					<ion-icon name="logo-python"></ion-icon>
+					<div class="text">PYTHON</div>
+					<p>Possuo alguns projetos feitos em Python para concluir o modulo da faculdade</p>
+					</div>
 				</div>
 			</div>
 		</div>
