--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<ul class="menu">
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Sobre mim</a></li>
-				<li><a href="#">Especialidade</a></li>
+				<li><a href="#">Conhecimentos</a></li>
 				<li><a href="#">Contato</a></li>
 			</ul>
 			<div class="menu-btn">
@@ -37,23 +37,19 @@
 	<!--sessao sobre-->
 	<section class="about" id="about">
 		<div class="max-width">
-			<h2 class="title">Sobre</h2>
+			<h2 class="title">Quem sou eu?</h2>
 			<div class="about-content">
 				<div class="column left">
 					<img src="imagens/imagem1.JPG" alt="">
 				</div>
 				<div class="column right">
 						<div class="text">Sou Andrei e sou <span>desenvolvedor</span></div>
-						<p>Sou estudante de Engenharia da Computação e possuo conhecimento em HTML, CSS, C e PYTHON.</p>
+						<p>Sou estudante de Engenharia da Computação e possuo paixão por computadores e todas as técnologias derivadas.</p>
 						<a href="">Download CV</a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="script.js"></script>
 
 	<!--sessao serviços-->
 	<section class="services" id="services">
@@ -64,7 +60,7 @@
 					<div class="box">
 					<ion-icon name="code-outline"></ion-icon>
 					<div class="text">HTML</div>
-					<p>Possuo habilidades com HTML como demonstrado nesse site</p>
+					<p>Possuo habilidades com HTML</p>
 					</div>
 				</div>
 
@@ -72,7 +68,7 @@
 					<div class="box">
 					<ion-icon name="logo-css3"></ion-icon>
 					<div class="text">CSS</div>
-					<p>Possuo habilidades com CSS utilizados no design desse site</p>
+					<p>Possuo habilidades com CSS</p>
 					</div>
 				</div>
 
@@ -80,12 +76,53 @@
 					<div class="box">
 					<ion-icon name="logo-python"></ion-icon>
 					<div class="text">PYTHON</div>
-					<p>Possuo alguns projetos feitos em Python para concluir o modulo da faculdade</p>
+					<p>Possuo habilidades em Python</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<!--sessao conhecimentos-->
+	<section class="skills" id="skills">
+		<div class="max-width">
+			<h2 class="title">Conhecimentos</h2>
+			<div class="skills-content">
+				<div class="column left">
+					<div class="text">Meus conhecimentos:</div>
+					<p>Possuo conhecimentos em HTML e CSS como demonstrados na criação e design desse site.</p>
+					<p>Possuo muita lógica de programação, já tendo desenvolvido sistemas em Python e C.</p>
+					<p>Possuo conhecimento em edição de videos, tendo um canal no YouTube.</p>
+					<p>Tambem possuo conhecimento em edição de imagens no Photoshop e Canva.</p>
+					<a href="#">Meus projetos.</a>
+				</div>
+				<div class="column right">
+					<div class="bars">
+						<div class="info">
+							<span>HTML</span>
+							<span>60%</span>
+						</div>
+
+						<div class="info">
+							<span>CSS</span>
+							<span>60%</span>
+						</div>
+
+						<div class="info">
+							<span>PYTHON</span>
+							<span>65%</span>
+						</div>
+
+						<div class="info">
+							<span>C</span>
+							<span>50%</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
