--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<div class="max-width">
 			<div class="home-content">
 				<div class="text-1">Olá, meu nome é</div>
-				<div class="text-2">Andrei Larroque</div>
-				<div class="text-3">Eu sou <span>desenvolvedor</span></div>
+				<div class="text-2">Josiele Weege</div>
+				<div class="text-3">Eu sou <span>artista</span></div>
 				<a href="#">Contratar-me</a>
 			</div>
 		</div>
@@ -44,9 +44,9 @@
 					<img src="imagens/imagem1.JPG" alt="">
 				</div>
 				<div class="column right">
-						<div class="text">Me chamo Andrei e sou <span>desenvolvedor</span></div>
-						<p>Sou estudante de Engenharia da Computação e possuo paixão por computadores e todas as técnologias derivadas.</p>
-						<a href="arquivos/ANDREI LARROQUE DOS SANTOS.pdf">Download CV</a>
+						<div class="text">Me chamo Josiele e sou <span>artista</span></div>
+						<p>Sou estudante de Farmácia, mas possuo paixão por arte.</p>
+						<a href="arquivos/">Download CV</a>
 				</div>
 			</div>
 		</div>
@@ -60,8 +60,8 @@
 				<div class="card">
 					<div class="box">
 					<ion-icon name="code-outline"></ion-icon>
-					<div class="text">HTML</div>
-					<p>Possuo habilidades com HTML</p>
+					<div class="text">Photoshop</div>
+					<p>Possuo habilidades com Photoshop</p>
 					</div>
 				</div>
 
@@ -69,7 +69,7 @@
 					<div class="box">
 					<ion-icon name="logo-css3"></ion-icon>
 					<div class="text">CSS</div>
-					<p>Possuo habilidades com CSS</p>
+					<p>Possuo habilidades com Ilustrator</p>
 					</div>
 				</div>
 
@@ -77,7 +77,7 @@
 					<div class="box">
 					<ion-icon name="logo-python"></ion-icon>
 					<div class="text">PYTHON</div>
-					<p>Possuo habilidades em Python</p>
+					<p>Possuo habilidades com Canva</p>
 					</div>
 				</div>
 			</div>
@@ -91,16 +91,13 @@
 			<div class="skills-content">
 				<div class="column left">
 					<div class="text">Conhecimentos:</div>
-					<p>Possuo conhecimentos em HTML e CSS como demonstrados na criação e design desse site.</p>
-					<p>Possuo muita lógica de programação, já tendo desenvolvido sistemas em Python e C.</p>
-					<p>Possuo conhecimento em edição de videos, tendo um canal no YouTube.</p>
-					<p>Tambem possuo conhecimento em edição de imagens no Photoshop e Canva.</p>
+					<p>Possuo conhecimento em edição de imagens no Photoshop, Ilustrator e Canva.</p>
 					<a href="#">Meus projetos.</a>
 				</div>
 				<div class="column right">
 					<div class="bars">
 						<div class="info">
-							<span>HTML</span>
+							<span>Photoshop</span>
 							<span>90%</span>
 						</div>
 						<div class="line html"></div>
@@ -108,26 +105,18 @@
 
 					<div class="bars">
 						<div class="info">
-							<span>CSS</span>
-							<span>60%</span>
+							<span>Ilustrator</span>
+							<span>90%</span>
 						</div>
 						<div class="line css"></div>
 					</div>
 
 					<div class="bars">
 						<div class="info">
-							<span>PYTHON</span>
-							<span>65%</span>
+							<span>Canva</span>
+							<span>90%</span>
 						</div>
 						<div class="line python"></div>
-					</div>
-
-					<div class="bars">
-						<div class="info">
-							<span>C</span>
-							<span>50%</span>
-						</div>
-						<div class="line c"></div>
 					</div>
 
 				</div>
